data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_775.wast
;; 6. **Branch Inside a Function without Any Surrounding Block:**    - Construct a module where a `br` instruction exists within a function body without being enclosed in any `block`, `if` or `loop`.    - Reasoning: Branches must be within structured control instructions, testing handling of improper placements.    - Relation to CFG: This could lead to an undefined target in the CFG, causing potential crashes or undefined behaviors.

(assert_invalid
  (module (func $invalid-br-no-block (br 0)))
  "unknown label"
)